--- a/chapter1.tex
+++ b/chapter1.tex
@@ -565,7 +565,7 @@ Find the Jacobian of the transformation. Where is it zero or infinite?
 \begin{minipage}[t]{.6\textwidth}
 %\centering
 \vspace{0pt}
-\input{D:/MathLatex/images/fig_p23_117_a.tex}
+\input{./images/fig_p23_117_a.tex}
 \end{minipage}\hfill
 \begin{minipage}[t]{0.3\textwidth}
 %\centering
