--- a/chapter2.tex
+++ b/chapter2.tex
@@ -8,7 +8,7 @@ Take polar coordinates $r, \theta$ in a plane. Draw the infinitesimal triangle w
 \begin{figure}[htp] 
     \centering
 %\includegraphics[scale=.5]{polar.jpg}
-\input{D:/MathLatex/images/fig_p27_21_a.tex}
+\input{./images/fig_p27_21_a.tex}
 \caption{Metric tensor in polar coordinate system}
 \label{fig:fig_p27_21_a}
 \end{figure}
@@ -33,7 +33,7 @@ Show that if $x^1 = r, x^2 = \theta, x^3 = \phi$, in the usual notation of spher
 One can choose to start from $ds^2 = dx^2+dy^2+dz^2$ and then expanding the $dx^i$ along $(r,\theta,\phi)$ but this a rather tedious way. So we use a more geometrical way of deriving the metric\\
 \begin{figure}[htp] 
     \centering
-\input{D:/MathLatex/images/fig_p27_22_a.tex}
+\input{./images/fig_p27_22_a.tex}
 \caption{Metric tensor in spherical coordinate system}
 \label{fig:fig_p27_22_a}
 \end{figure}
@@ -336,7 +336,7 @@ Show that the small angle between unit vectors $X^r$ and $X^r + dX^r$ (these inc
     \centering
  
 %\includegraphics[scale=.5]{Exp37_1.jpg}
-\input{D:/MathLatex/images/fig_p37_213_a.tex}
+\input{./images/fig_p37_213_a.tex}
 \caption{Small angle expression}
 \end{figure}
 By definition ($\mathbf{2.302}$ page 33)
@@ -1019,7 +1019,7 @@ The answer is NO. Let's consider the following unit vector field in a Cartesian 
 
 %\centering
 \vspace{0pt}
-\input{D:/MathLatex/images/fig_p62_236_a.tex}
+\input{./images/fig_p62_236_a.tex}
 %\includegraphics[scale=.3]{unitvectorfield1.jpg}
 \end{minipage}\hfill
 \begin{minipage}[H]{0.4\textwidth}
@@ -1059,7 +1059,7 @@ Now, let's consider another unit vector field in a Cartesian Coordinate system:
 %\centering
 \vspace{0pt}
 %\includegraphics[scale=.3]{unitvectorfield2.jpg}
-\input{D:/MathLatex/images/fig_p62_236_b.tex}
+\input{./images/fig_p62_236_b.tex}
 \end{minipage}\hfill
 \begin{minipage}[H]{0.4\textwidth}
 %\centering
@@ -1423,7 +1423,7 @@ For cylindrical coordinates in Euclidean 3-space, write down the metric form by 
 \begin{figure}[h]
 \centering
 %\includegraphics[scale=.4]{polar3d.jpg}
-\input{D:/MathLatex/images/fig_p78_247_a.tex}
+\input{./images/fig_p78_247_a.tex}
 \caption{Cylindrical coorinates. }
 \label{fig:fig_p78_247_a}
 \end{figure}
@@ -2021,7 +2021,7 @@ In a plane, let $x^1, \  x^2$ be the distances of a general point from the point
 \end{tcolorbox}
 \begin{figure}[h]
 %\includegraphics[scale=.4]{Bipolar.jpg}
-\input{D:/MathLatex/images/fig_p79_260_a.tex}
+\input{./images/fig_p79_260_a.tex}
 \caption{Bipolar coordinates}
 \label{fig:fig_p79_260_a}
 \end{figure}
@@ -2067,7 +2067,7 @@ x^1x^2 &-\left[(y^1)^2 +(y^2)^2-1)\right] \\\\
 We use plane geometry to express expression (11) as  a function of only $(x^1,x^2)$. For the triangle $APB$ in the figure below, we have
 \begin{figure}[h]
 %\includegraphics[scale=.4]{Bipolar2.jpg}
-\input{D:/MathLatex/images/fig_p79_260_b.tex}
+\input{./images/fig_p79_260_b.tex}
 \caption{Bipolar coordinates versus Cartesian coordinates}
 \label{fig:fig_p79_260_b}
 \end{figure}
