--- a/chapter6.tex
+++ b/chapter6.tex
@@ -1,4 +1,4 @@
-\setcounter{chapter}{4}
+\setcounter{chapter}{5}
 \chapter{Applications to Hydrodynamics, Elasticity, and Electromagnetic radiation}
 \pagebreak[4]
 \section{p191 - Exercise}
@@ -40,7 +40,7 @@ $$\lozenge$$\\
 The equations get simplified and reduce to a motion of a particle on a circle.
 \begin{figure}[H]
 \centering
-\input{D:/MathLatex/images/fig_p191_Exa.tex}
+\input{./images/fig_p191_Exa.tex}
 \caption{Eulerian viewpoint of a spinning fluid}
 \label{fig:fig_p191_Exa}
 \end{figure}
@@ -204,11 +204,11 @@ Pressure is independent of the direction
 \end{tcolorbox}
 \begin{figure}[H]%
     \centering
-    \subfloat[]{\input{D:/MathLatex/images/fig_p199_P.tex}}
+    \subfloat[]{\input{./images/fig_p199_P.tex}}
     \quad
-        \subfloat[]{\input{D:/MathLatex/images/fig_p199_Pb.tex}}
+        \subfloat[]{\input{./images/fig_p199_Pb.tex}}
     \quad
-        \subfloat[]{\input{D:/MathLatex/images/fig_p199_Pc.tex}}
+        \subfloat[]{\input{./images/fig_p199_Pc.tex}}
     \quad
 \caption{Pressure on a trirectangular tetrahedron}
 \label{fig:fig_p199}
@@ -493,11 +493,11 @@ Some thoughts about polarization
 
 \begin{figure}[H]%
     \centering
-    \subfloat[]{\input{D:/MathLatex/images/fig_p221_6331_a.tex}}
+    \subfloat[]{\input{./images/fig_p221_6331_a.tex}}
     \quad
-        \subfloat[]{\input{D:/MathLatex/images/fig_p221_6331_b.tex}}
+        \subfloat[]{\input{./images/fig_p221_6331_b.tex}}
     \quad
-        \subfloat[]{\input{D:/MathLatex/images/fig_p221_6331_c.tex}}
+        \subfloat[]{\input{./images/fig_p221_6331_c.tex}}
     \quad
 \caption{Polarization of light}
 \label{fig:fig_p221}
@@ -703,9 +703,9 @@ where the $\overset{n}{\Pi}^{(0)}_r$ satisfy the condition  $\overset{n}{\Pi}^{(
 This is the situation as illustrated in the figure $(a)$ below.
 \begin{figure}[H]%
     \centering
-    \subfloat[]{\input{D:/MathLatex/images/fig_p227_6361_a.tex}}
+    \subfloat[]{\input{./images/fig_p227_6361_a.tex}}
     \quad
-     \subfloat[]{\input{D:/MathLatex/images/fig_p227_6361_b.tex}}
+     \subfloat[]{\input{./images/fig_p227_6361_b.tex}}
 \caption{Integral form of Hertz vectors }
 \label{fig:fig_p221}
 \end{figure}
@@ -1084,7 +1084,7 @@ where the integral is take round any closed curve, and $\dv{}{t}$ is the co-movi
 
 \begin{figure}[H]%
     \centering
-\input{D:/MathLatex/images/fig_p235_Ex3b.tex}
+\input{./images/fig_p235_Ex3b.tex}
 \caption{Evolution of a closed co-moving curve }
 \label{fig:fig_p2235}
 \end{figure}
@@ -1132,7 +1132,7 @@ Curves having at each point the direction of the vorticity vector $\omega^r$ are
 \end{tcolorbox}
 \begin{figure}[H]%
     \centering
-\input{D:/MathLatex/images/fig_p235_Ex4b.tex}
+\input{./images/fig_p235_Ex4b.tex}
 \caption{Vortex line tube }
 \label{fig:fig_p2235}
 \end{figure}
@@ -1813,7 +1813,7 @@ As in the equation of the plane the only varying parameter is $S=\frac{2\pi}{\la
 $$\lozenge$$
 \begin{figure}[H]%
     \centering
-\input{D:/MathLatex/images/fig_p237_Ex13.tex}
+\input{./images/fig_p237_Ex13.tex}
 \caption{Reflection of a plain wave }
 \label{fig:fig_p237}
 \end{figure}
