--- a/chapter3.tex
+++ b/chapter3.tex
@@ -8,7 +8,7 @@ The reason is because those surfaces can be "unwrapped" like the figure below sh
 \begin{figure}[h]
 %\includegraphics[scale=.5]{Conemapping.jpg}
 
-\input{D:/MathLatex/images/fig_p82_21_a.tex}
+\input{./images/fig_p82_21_a.tex}
 \caption{Unwrapping of a cone}
 \end{figure}\\
 For the cone, we can for each point $\ P $ on the cone, lying on a distance $\ h $ from the apex and making an angle $\theta $,  associate on a plane, tangent to the cone,  a  point $ P^* $ lying at the same  distance $ h $ from the apex, taken as origin for the coordinate system, and making an angle $\phi =  \theta \sin{\alpha} $ with $ \alpha $ the angle of the cone. This pair of coordinates are polar coordinates with $ r \in (-\infty, + \infty)$ and $\theta \in [0, 2k\pi)$. 
@@ -22,7 +22,8 @@ $$\blacklozenge$$
 \begin{tcolorbox}
 What are the values of $R^s_{.rmn}$ in an Euclidean plane, the coordinates being rectangular Cartesians? Deduce the values of the components of this tensor for polar coordinates from its tensor character, or else by direct calculation.
 \end{tcolorbox}
-See 2.64 page 139 (exercise 18).
+$$R^s_{rmn}=0$$
+also in polar coordinates (see exercise 18 of Chapter $\RomanNumeralCaps{2}$).
 $$\blacklozenge$$
 \newpage
 
@@ -182,7 +183,7 @@ and thus we get
 %\centering
 \vspace{0pt}
 %\includegraphics[scale=.5]{p85_ex1.png}
-\input{D:/MathLatex/images/fig_p91_153_a.tex}
+\input{./images/fig_p91_153_a.tex}
 \end{minipage}\hfill
 \caption{Geodesics on a cylinder}
 \label{fig:fig_p91_153_a}
@@ -205,9 +206,9 @@ From exercise on page 83 we know that $R^r_{.smn}=0$ in an Euclidean space. Also
 This is also easily deducted from a geometrical point of view. In an Euclidean space, the geodesics are straight lines. For an infinitesimal change in the geodesic family parameter $v$, we can assume that a vector, going perpendicular from 1 point from one geodesic with parameter $v$  to another infinitesimal close  geodesic with parameter $v+dv$,  will also be perpendicular on this geodesic. This situation is depicted in fig. ~\ref{fig:fig_p93_16}(a). We conclude that $\overrightarrow{AA^{'}} \ \parallel \ \overrightarrow{PP^{'}}$. This can also be deducted from Thales theorem (see fig.~\ref{fig:fig_p93_16} (b)). 
 \begin{figure}[H]%
     \centering
-    \subfloat[]{\input{D:/MathLatex/images/fig_p93_16_a.tex}}
+    \subfloat[]{\input{./images/fig_p93_16_a.tex}}
 	\qquad
-    \subfloat[]{\input{D:/MathLatex/images/fig_p93_16_b.tex}}
+    \subfloat[]{\input{./images/fig_p93_16_b.tex}}
 \caption{Geometrical deduction of the geodesical deviation equation in an Euclidean space.}
 \label{fig:fig_p93_16}
 \end{figure}
@@ -223,13 +224,13 @@ $$\blacklozenge$$
 ... But under parallel propagation along a geodesic, a vector makes a constant angle with the geodesic; following the vector round the small quadrilateral, it is easy to see that the angle through which the vector has turned on completion of the circuit is $E$, the excess of the angle-sum of four right angles...
 \end{tcolorbox}
 \begin{figure}[h]
-\input{D:/MathLatex/images/fig_p96_3415_a.tex}
+\input{./images/fig_p96_3415_a.tex}
 \caption{Parallel transportation along a  closed path}
 \label{fig:fig_p96_3415_a}
 \end{figure}
 Consider 4 geodesics $\gamma_{1}, \gamma_{2},\gamma_{3},\gamma_{4}$ close to each other so that they form a small quadrilateral. At each intersection they form an angle $\Psi_{i\rightarrow i+1}$. A vector $\overrightarrow{u_{0}}$ is transported parallely along the path starting at the intersection $S$ of $\gamma_{1},\gamma_{4}$ and ends as vector $\overrightarrow{u_{t}}$ at the same point $S$. In general $\overrightarrow{u_{0}}\ne \overrightarrow{u_{t}}$ and will differ by a small angle $\delta\theta$. Let's investigate the relationship between $\delta\theta$ and the $\Psi_{i\rightarrow i+1}$.\\
 \begin{figure}[h]
-\input{D:/MathLatex/images/fig_p96_3415_b.tex}
+\input{./images/fig_p96_3415_b.tex}
 \caption{Relationship between parallel transportation along a closed path and the excess of the angle-sum over four right angles of a quadilateral.}
 \label{fig:fig_p96_3415_b}
 \end{figure}\\
@@ -270,9 +271,9 @@ and so
 Note that these relationships are valid on the (curved) $V_{2}$ manifold. In order to go further we map the quadrilateral, on the manifold, on it's tangent plane (see fig.~\ref{fig:fig_p96_3415_d} (a) hereunder) - supposing that the quadrilateral is infinitesimally small and that we can find a conformal map from $\gamma$ to $T(\gamma)$.
 \begin{figure}[h]%
     \centering
-    \subfloat[]{\input{D:/MathLatex/images/fig_p96_3415_c.tex}}
+    \subfloat[]{\input{./images/fig_p96_3415_c.tex}}
 	\qquad
-    \subfloat[]{\input{D:/MathLatex/images/fig_p96_3415_d.tex}}
+    \subfloat[]{\input{./images/fig_p96_3415_d.tex}}
 \caption{Relationship between parallel transportation along a closed path and the excess of the angle-sum over four right angles of a quadrilateral.}
 \label{fig:fig_p96_3415_d}
 \end{figure}\\
@@ -308,7 +309,7 @@ Still using the same notation and Fig. 7, we have at B the three vectors $(T^r)_
 \end{tcolorbox}
 First we note that for an invariant "propagated parallely" along a curve we have $$\fdv{(T^r Y_r)}{u} = \fdv{T^r} {u}Y_r+T^r\fdv{Y_r}{u}=0$$
 \begin{figure}[h]
-\input{D:/MathLatex/images/fig_p102_3516_a.tex}
+\input{./images/fig_p102_3516_a.tex}
 \caption{Parallel transportation along a  closed path}
 \label{fig:fig_p102_3516_a}
 \end{figure}
@@ -362,7 +363,7 @@ To better understand this last statement recall that from 3.515, we have
 As $\left( Y_r \right)_B$ is arbitrary we have $\left( \Delta T^r \right)_B =0$. Consider fig. ~\ref{fig:fig_p105_3521_a} below.\\
 \begin{figure}[H]
 \center
-\input{D:/MathLatex/images/fig_p105_3521_a.tex}
+\input{./images/fig_p105_3521_a.tex}
 \caption{Parallel transportation along a path in a space with zero curvature tensor}
 \label{fig:fig_p105_3521_a}
 \end{figure}
@@ -398,7 +399,7 @@ Take as manifold $V_2$ the surface of an ordinary right circular cone, and consi
 \end{tcolorbox}
 \begin{figure}[h]
 \center
-\input{D:/MathLatex/images/fig_p108_Ex2_a.tex}
+\input{./images/fig_p108_Ex2_a.tex}
 \caption{Intrinsic coordinates on  a cone}
 \label{fig:fig_p108_Ex2_a}
 \end{figure}
@@ -497,9 +498,9 @@ The last equation in (19) becomes
 So for $\theta = 2\pi$ the angle between the starting vector and the transported vector is not $2m\pi$. 
 \begin{figure}[H]%
     \centering
-    \subfloat[]{\input{D:/MathLatex/images/fig_p108_Ex2_b1.tex}}
+    \subfloat[]{\input{./images/fig_p108_Ex2_b1.tex}}
 	\qquad
-    \subfloat[]{\input{D:/MathLatex/images/fig_p108_Ex2_b2.tex}}
+    \subfloat[]{\input{./images/fig_p108_Ex2_b2.tex}}
 \caption{Relationship between parallel transportation along a circle of a cone and unwrapping a cone .}
 \label{fig:fig_p108_Ex2_b2}
 \end{figure}
@@ -509,7 +510,7 @@ Fig. ~\ref{fig:fig_p108_Ex2_b2} illustrates the analogy between\\
 The transported vector will only coincide with the initial vector for $\sqrt{k}=\sin{\alpha}  = \frac{1}{n}\quad (n= 1, 2, \dots)$. Fig. ~\ref{fig:fig_p108_Ex2_b3} illustrates this in the $X-Y$-plane,  for n=3. Only after a transportation over three periods, will the transported vector coincide with the initial vector. The dotted area represents the unwrapped cone.
 \begin{figure}[H]%
     \centering
-{\input{D:/MathLatex/images/fig_p108_Ex2_b3.tex}}
+{\input{./images/fig_p108_Ex2_b3.tex}}
 \caption{Parallel transportation along a circle of a cone with $\sin{\alpha}  = \frac{1}{3}$ .}
 \label{fig:fig_p108_Ex2_b3}
 \end{figure}
@@ -606,7 +607,7 @@ But let's be careful: there is no reason to assume that  $dx^m = dx^{'m}$. Let's
 %\centering
 \vspace{0pt}
 %\includegraphics[scale=.5]{p85_ex1.png}
-\input{D:/MathLatex/images/fig_p109_Ex5_a.tex}
+\input{./images/fig_p109_Ex5_a.tex}
 \end{minipage}\hfill
 \caption{Embedded $V_N$ spaces}
 \label{fig:p109_Ex5_a}
