--- a/chapter4.tex
+++ b/chapter4.tex
@@ -265,7 +265,7 @@ The null geodesic equations:
 a_{mn} \dv{x_m}{u}\dv{x_n}{u}=0\\
 \end{array} \right.\\
 \Rightarrow \spatie & \left\{ \begin{array}{l}
-x_r = A_ru+B_r\quad \text{( put } B_r=0 \text{ by aqequate choice of the origin )} \\\\
+x_r = A_ru+B_r\quad \text{( put } B_r=0 \text{ by adequate choice of the origin )} \\\\
 A_1^2+A_2^2+A_1^2+A_3^2-A_4^2=0\\
 \end{array} \right.\\
 \Rightarrow \spatie &\frac{\left((x_1)^2+(x_2)^2+(x_3)^2-(x_4)^2\right)}{u^2} = 0\quad \text{ for } u\neq 0\\
@@ -275,7 +275,7 @@ $$\lozenge$$
 About the existence of three regions. First let's investigate the case in a $V_3$ space-time manifold in order to have a more intuitive grasp.\\
 Consider a family of events $(p_1,p_2,u)$ with $u\in\left(-\infty,\infty\right)$ (see the line $P^{'}P^{"}$ in figure 1.1.)
 \begin{figure}[H]
-\input{D:/MathLatex/images/fig_p126_Ex1_a.tex}
+\input{./images/fig_p126_Ex1_a.tex}
 \caption{Regions delimited by the light cone in a $V_3$ space-time manifold}
 \label{fig:fig_p96_3415_a}
 \end{figure}
@@ -288,214 +288,9 @@ Let's generalize this now for a $V_4$ space-time manifold.\\
 Put $R^2 = (y_1)^2+(y_2)^2+(y_3)^2$ and consider $\phi(y_1,y_2,y_3,y_4)= (y_1)^2+(y_2)^2+(y_3)^2-(y_4)^2$ so \begin{align}\phi(y_1,y_2,y_3,y_4)= R^2-(y_4)^2\end{align}
 For $\phi=0$ we lie on the light-cone.\\
 For $\phi>0 \quad\Rightarrow R^2 > y_4^2$ and so $-R<y_4<R$ defines one region (region III).\\
-For $\phi<0 \quad\Rightarrow R^2 < y_4^2$ and so   $y_4>R$ and $y_4<-R$ define two  regions (region I and II).
+For $\phi<0 \quad\Rightarrow R^2 < y_4^2$ and so   $y_4>R$ or $y_4<-R$ define two  regions (region I and II).
 $$\lozenge$$
-
-\textbf{We now show statement $\mathit{a.}$ of the exercise.}\\
-Consider $2$ events $P_0,\ P_1$ with coordinates $(y_1^{(0)},y_2^{(0)},y_3^{(0)},y_4^{(0)})$ and $(y_1^{(1)},y_2^{(1)},y_3^{(1)},y_4^{(1)})$  and a curve defined by 
-\begin{align*}
-y_i= \pm\sqrt{\left(\left(y_i^{(1)}\right)^2-\left(y_i^{(0)}\right)^2\right)u + \left(y_i^{(0)}\right)^2}\spatie u\in \left[0,1\right]
-\end{align*}
-where the $\pm$ is chosen so that $y_i(0) = y_i^{(0)}$ and $y_i(1) = y_i^{(1)}$ and that the sign only changes when $y_i(u)=0$ and $sign\left(y_i^{(0)}\right) \neq sign\left(y_i^{(1)}\right)$. Such curve will be continuous.
-Put
-\begin{align*}
-R^2&= \left(y_1\right)^2+\left(y_2\right)^2+\left(y_3\right)^2\\
-{R_{0}}^2&= \left(y^0_1\right)^2+\left(y^0_2\right)^2+\left(y^0_3\right)^2\\
-{R_{1}}^2&= \left(y^1_1\right)^2+\left(y^1_2\right)^2+\left(y^1_3\right)^2
-\end{align*}
-For the points on the curve, $R^2$ can then be written as 
-\begin{align*}
-R^2&= \left(R_1^2-R_0^2\right)u+R_0^2
-\end{align*}
-Then \begin{align}
-&\phi(u) = \left(R_1^2-R_0^2\right)u+R_0^2 - \left[\left(y_4^{(1)}\right)^2   -\left(y_4^{(0)}\right)^2 \right]u -\left(y_4^{(0)}\right)^2 \quad \text{(see (1))}
-\end{align}\\\\
-\textbf{Case a1: $P_0, P_1$ both lie in region I or both in region II.} Be $\phi_0\equiv \phi(0)$, $\phi_1\equiv \phi(1)$, the we have the following conditions:\\
-\begin{align*}
-\left\{\begin {matrix}
-\phi_0 < 0&\wedge &\phi_1  < 0\\\\
-R_0^2 < (y_4^{0})^2 &\wedge &  R_1^2 < (y_4^{1})^2 \\\\
-\text{ with } (y_4^{0}>0 \quad  \wedge \quad y_4^{1}>0)\text{ in Region I} &\vee & (y_4^{0}<0\quad \wedge \quad y_4^{1}<0)  \text{ in Region II}
-\end{matrix}\right.
-\end{align*}
-Then, $$\cancel{\exists } \  u \in \left[0,1\right]: \phi(u)=0$$
-Indeed, as $\phi_0 < 0\wedge \phi_1  < 0$, from $(2)$ we have ,
-\begin{align}
-\phi(u)=0\quad\Rightarrow\spatie  &= -\frac{R_0^2- \left(y_4^{(0)}\right)^2}{R_1^2-R_0^2  -\left(y_4^{(1)}\right)^2  +\left(y_4^{(0)}\right)^2}
-\end{align}
-Let's simplify notationally the last equation. Put $R_0^2- \left(y_4^{(0)}\right)^2=-\tau $ and $R_1^2- \left(y_4^{(1)}\right)^2=-\sigma$ with both $\tau, \sigma > 0$. $(3)$ can be written as
-\begin{align*}
-u&=\frac{\tau}{\tau-\sigma}\\
- &=\frac{1}{1-\frac{\sigma}{\tau}}\\
-\Rightarrow\spatie &u \notin [0,1] \spatie \text{ as } \frac{\sigma}{\tau} >0
-\end{align*}
-Note, that in the case $\tau=\sigma$ we have $\phi(u)= \tau = \text{ constant}$ and can't reach $0$.
-So, there exist no $u\in\left[0,1\right]$ for which $\phi(u)=0$ and the curve does not intersect the null cone.\\\\
-\textbf{Case a2: $P_0, P_1$ both lie in region III.} Then,
-\begin{align*}
-\left\{\begin {matrix}
-\phi_0 > 0&\wedge &\phi_1  > 0\\\\
-R_0^2 > (y_4^{0})^2 &\wedge &  R_1^2> (y_4^{1})^2 \\
-\end{matrix}\right.
-\end{align*}
-Then, $$\cancel{\exists } \  u \in \left[0,1\right]: \phi(u)=0$$
-Indeed,
-Let's simplify  notationally the  equation (3) by now by putting $R_0^2- \left(y_4^{(0)}\right)^2=\tau $ and $R_1^2- \left(y_4^{(1)}\right)^2=\sigma$ with both $\tau, \sigma > 0$. $(3)$ can be written again as
-\begin{align*}
-u& =\frac{1}{1-\frac{\sigma}{\tau}}
-\end{align*}
-and follow the same reasoning as in case 1.
-So, there exist no $u\in\left[0,1\right]$ for which $\phi(u)=0$ and the curve does not intersect the null cone.\\\\
-\\$$\lozenge$$
-\newpage
-\textbf{We now show statement $\mathit{b.}$ of the exercise.}\\\\
-
-\textbf{Case b1: $P_0$ lies in region I, $P_1$  lies in region II.} \\
-Those two regions are separated by the $3$-flat (plane) $y_4=0$. So it's suffice that $R^2=0$ for $\phi(u)$ being zero. Hence $y_i=0$, $  i=1,2,3$, and the curve will cut the cone at it's apex.
-\\\\
-\textbf{Case b2: $P_0$ lies in region I or II, $P_1$  lies in region III.} \\
-We have 
-\begin{align*}
-R_0^2 > (y_4^{0})^2\quad R_1^2 < (y_4^{1})^2
-\end{align*}
-Put $R_0^2 - (y_4^{0})^2= \tau$ and $R_1^2 - (y_4^{1})^2 =-\sigma$ with $\tau,\sigma >0$. We get
-\begin{align*}
-\phi(u)&=0\\
-\Rightarrow \spatie u&=-\frac{\tau}{-\sigma-\tau}\\
-&= \frac{1}{1+\frac{\sigma}{\tau}}
-\end{align*}
-So, there is a solution $u\in \left[0,1\right]$ for which $\phi(u)=0$ and the curve intersects the null cone.
-\\$$\lozenge$$\\
-\newpage
-
-\textbf{We now investigate the straight segment questions.} \\
-Case 1: $A$ and $B$ both lie in the present (region I) or in the past (region II)\\
-Consider $2$ events $P_0,\ P_1$ with coordinates $(y_1^{(0)},y_2^{(0)},y_3^{(0)},y_4^{(0)})$ and $(y_1^{(1)},y_2^{(1)},y_3^{(1)},y_4^{(1)})$  and a segment  defined by 
-\begin{align}y_i= \left(y_i^{(1)}-y_i^{(0)}\right)u + y_i^{(0)}\spatie u\in \left[0,1\right]
-\end{align}
-Be $\phi(u)= y_1^2+y_2^2+y_3^2-y_4^2$ with $\phi_0\equiv \phi(0) < 0$ and $\phi_01\equiv \phi(1) < 0$.\\
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-\begin{comment}
-Then,
- \begin{align}
-\phi(u) &= \left\{\begin{array}{l} \ \ \left[\left(y_1^{(1)}-y_1^{(0)}\right)u + y_1^{(0)}\right]^2\\
-+\left[\left(y_2^{(1)}-y_2^{(0)}\right)u + y_2^{(0)}\right]^2\\
-+\left[\left(y_3^{(1)}-y_3^{(0)}\right)u + y_3^{(0)}\right]^2\\
--\left[\left(y_4^{(1)}-y_4^{(0)}\right)u + y_4^{(0)}\right]^2\\
-\end{array}\right.\\
-&= \left\{\begin{array}{l} \ \ 
-\left(y_1^{(1)}\right)^2 u^2+\left(y_1^{(0)}\right)^2 u^2 - 2y_1^{(1)}y_1^{(0)}u^2 + 2y_1^{(1)}y_1^{(0)}u-  2\left(y_1^{(0)}\right)^2 u+ \left(y_1^{(0)}\right)^2\\
-+\left(y_2^{(1)}\right)^2 u^2+\left(y_2^{(0)}\right)^2 u^2 - 2y_2^{(1)}y_2^{(0)}u^2 + 2y_2^{(1)}y_2^{(0)}u-  2\left(y_2^{(0)}\right)^2 u+ \left(y_2^{(0)}\right)^2\\
-+\left(y_3^{(1)}\right)^2 u^2+\left(y_3^{(0)}\right)^2 u^2 - 2y_3^{(1)}y_3^{(0)}u^2 + 2y_3^{(1)}y_3^{(0)}u-  2\left(y_3^{(0)}\right)^2 u+ \left(y_3^{(0)}\right)^2\\
--\left(y_4^{(1)}\right)^2 u^2-\left(y_4^{(0)}\right)^2 u^2 + 2y_4^{(1)}y_4^{(0)}u^2 - 2y_4^{(1)}y_4^{(0)}u+  2\left(y_4^{(0)}\right)^2 u- \left(y_4^{(0)}\right)^2\\
-\end{array}\right.
-\end{align}
-Put $\phi_0 = \left(y_1^{(0)}\right)^2+\left(y_2^{(0)}\right)^2+\left(y_3^{(0)}\right)^2-\left(y_4^{(0)}\right)^2$ and $\phi_1 = \left(y_1^{(1)}\right)^2+\left(y_2^{(1)}\right)^2+\left(y_3^{(1)}\right)^2-\left(y_4^{(1)}\right)^2$. \\
-Then,
-\begin{align}
-\phi(u)= \left\{\begin{array}{l} \ \ 
-\phi_1u^2+\phi_0u^2-2\left(y_1^{(1)}y_1^{(0)}+y_2^{(1)}y_2^{(0)}+y_3^{(1)}y_3^{(0)}-y_4^{(1)}y_4^{(0)}\right)u^2 \\
--2\phi_0 u + 2 \left(y_1^{(1)}y_1^{(0)}+y_2^{(1)}y_2^{(0)}+y_3^{(1)}y_3^{(0)}-y_4^{(1)}y_4^{(0)}\right)u\\
-+\phi_0
-\end{array}\right.
-\end{align}
-Let's put $\kappa = y_1^{(1)}y_1^{(0)}+y_2^{(1)}y_2^{(0)}+y_3^{(1)}y_3^{(0)}-y_4^{(1)}y_4^{(0)}$, we get the expression
-\begin{align}
-\phi(u)&= 
-\left(\phi_1 +\phi_0-2\kappa\right) u^2 + 2 \left(\kappa- \phi_0\right)u
-+\phi_0
-\end{align}
-
-
-The function $\phi(u)$ is a parabola. 
-\begin{figure}[H]%
-    \centering
-    \subfloat[]{\input{D:/MathLatex/images/fig_p126_Ex1_c1.tex}}
-	\qquad
-    \subfloat[]{\input{D:/MathLatex/images/fig_p126_Ex1_c2.tex}}
-    \qquad
-    \subfloat[]{\input{D:/MathLatex/images/fig_p126_Ex1_c3.tex}}
-\caption{Non problematic null cone parametric functions.}
-\label{fig:fig_p126_1a}
-\end{figure}
-\begin{figure}[H]%
-    \centering
-    \subfloat[]{\input{D:/MathLatex/images/fig_p126_Ex1_c4.tex}}
-\caption{Problematic null cone parametric functions.}
-\label{fig:fig_p126_1b}
-\end{figure}From the parabola's in figure $4.2.$ it is clear that the function can't reach $0$ in $u\in(0,1)$  and hence that the segment will not intersect the null cone.\\
-One problematic could occur as represented in figure $4.3$.
-For such a parabola, we have :
-\begin{align}
-\left\{\begin{array}{l} \ \ 
-\phi(u)= au^2+bu+c\\\\
-a = \left(\phi_1 +\phi_0-2\kappa\right) <0\\\\
-b=2 \left(\kappa- \phi_0\right)\\\\
-c=\phi_0\\\\
-a+b=\phi_1-\phi_0\\\\
-\phi_0<0\\\\
-\phi_1 < 0
-\end{array}\right.
-\end{align}
-From the $3$ known inequalities 
-\begin{align}
-\left\{\begin{array}{l} \ \ 
-a < 0\\\\
-\phi_0<0\\\\
-\phi_1 < 0
-\end{array}\right.
-\end{align}
-we get
-\begin{align}
-\left\{\begin{array}{l} \ \ 
-a < 0\quad\Rightarrow\quad \kappa > \frac{\phi_1+\phi_0}{2} \\\\ b=2 \left(\kappa- \phi_0\right)\quad \Rightarrow\quad b > \phi_1-\phi_0\\\\
-\end{array}\right.
-\end{align}
-Note that there is nothing special in the choice of $\phi_1, \ \phi_0$ as the segment is not oriented and as $\phi_1,\phi_0 <0$ we can put arbitrarily $b \geq0$ with $\phi_1 \geq \phi_0$.\\ 
-Let's examine if there is a value $u_{max} \in (0,1)$ such that $\phi(u_{max})\geq 0$ and let us investigate whether the relation between the coefficients $a,b$ does not lead to a contradiction for such value of $u_{max} \in (0,1)$.  
-\begin{align}
-\dv{\phi(u)}{u}&=0\\
-\Rightarrow\spatie u_{max} &= -\frac{b}{2a}\quad\text{ with } 0<b < -2a\\
-\phi(u_{max}) &= -\frac{b^2}{4a}+\phi_0
-\end{align}
-Is it possible to have $\phi(u_{max}) \geq 0$ with $u_{max} \in (0,1)$? One straightforward condition to have this possible is that the discriminant of the quadratic equation os $b^2-4ac>=0$.
-Hence,
-\begin{align}
-D &= \left[2 \left(\kappa- \phi_0\right)\right]^2-4\left(\phi_1 +\phi_0-2\kappa\right)\phi_0\\
-&= 4\kappa^2+ 4\phi_0^2-8\kappa\phi_0-4\phi_1\phi_0 -4\phi_0^2+8\kappa\phi_0\\
-&= 4\left(\kappa^2-\phi_1\phi_0\right)\\
-&= \left\{\begin{array}{l} \ \ 
-4\left[\left(y_1^{(0)}y_4^{(1)}-y_4^{(0)}y_1^{(1)}\right)^2
-+\left(y_4^{(0)}y_2^{(1)}-y_2^{(0)}y_4^{(1)}\right)^2
-+\left(y_4^{(0)}y_3^{(1)}-y_3^{(0)}y_4^{(1)}\right)^2\right]\\\\
--4\left[\left(y_2^{(0)}y_1^{(1)}-y_1^{(0)}y_2^{(1)}\right)^2
-+\left(y_3^{(0)}y_1^{(1)}-y_1^{(0)}y_3^{(1)}\right)^2
-+\left(y_3^{(0)}y_2^{(1)}-y_2^{(0)}y_3^{(1)}\right)^2\right]\\\\
-\end{array}\right.
-\end{align}
-Obviously, this path of proving leads to nothing as $D$ can be positive even for a segment lying entirely in zone $I$ or $II$. To see that, take two events, stationary in  the space  at the point $P\left(0,0,y_3^{(0)}\right)$. The negative term in (39) disappears and obviously $D>0$.\\
-$\dagger$WHAT IS THE ANALYTICAL WAY TO PROVE THIS? IS $a>0$ A CONDITION?$\dagger$
-\end{comment}
-\begin{comment}
-\begin{figure}[H]
-\input{D:/MathLatex/images/fig_p126_Ex1_b.tex}
-\caption{Travelling between two points in region III (present) in a  $V_3$ space-time manifold}
-\label{fig:fig_p96_3415_b}
-\end{figure}
-\end{comment}
+$$\dagger$$
 $$\blacklozenge$$
 \newpage
 
@@ -704,7 +499,7 @@ dS &= R^2\sin^2\left(\frac{r}{R}\right)\sin\theta d\phi d\theta\\
 We see that the area is a cyclic function of $r$ having zeros' at $r= k\frac{\pi}{R }, k=1,2,\dots$
 \begin{figure}[H]
 \begin{center}
-\input{D:/MathLatex/images/fig_p138_Ex2.tex}
+\input{./images/fig_p138_Ex2.tex}
 \caption{Area of an antipodal 3-space of positive-definite metric form}
 \label{fig:fig_p138_Ex2}
 \end{center}
@@ -894,11 +689,11 @@ $$y^r=p^r\frac{2}{\sqrt{K}}\tan\left(\half r \sqrt{K}\right)$$
 where $p^r$ ar the the components of the unit tangent vector $\left(\dv{x^r}{s}\right)$ at $O$ to the geodesic $OP$ and $r$ is the geodesic distance $OP$.)
 \end{tcolorbox}
 Let us first understand what happens. Fig.1.5 for a $V_3$ will help us understand.
-Let $P$ and $P+dP$ be two points separated by an infinitesimal distance. Consider the two geodesics initiated from the origin and joining these two points. Be $X$ and $X^{'}$ the two tangents unit vectors  to these geodesics. Those vectors have components $p^r=\dv{x^r}{s}$ taken along their respective geodesics.  By the considered transformation the points $P$ and $P+dP$ are mapped on the  points  $\tau (P)$ and $\tau (P+dP)$ with $\left|O\tau (P)\right|$ and $\left|O\tau (P+dP)\right|$ collinear with the  two tangents unit vectors  $X$ and $X^{'}$ . \\
+Let $P$ and $P+dP$ be two points separated by an infinitesimal distance. Consider the two geodesics initiated from the origin and joining these two points. Be $X$ and $X^{'}$ the two tangents unit vectors  to these geodesics. Those vectors have components $p^r=\dv{x^r}{s}$ taken along their respective geodesics.  By the considered mapping, $y^r=p^r\frac{2}{\sqrt{K}}\tan\left(\half r \sqrt{K}\right)$, the points $P$ and $P+dP$ are mapped on the  points  $\tau (P)$ and $\tau (P+dP)$ with $\left|O\tau (P)\right|$ and $\left|O\tau (P+dP)\right|$ collinear with the  two tangents unit vectors  $X$ and $X^{'}$ . \\
 Observe also the segment $PN$ which corresponds to the geodesic displacement $\eta$ for the geodesic distance $r=OP$. As the metric form is positive-definite, we can consider that the infinitesimal triangle $\left|\widehat{PNP+dP}\right|$ lies in an infinitesimally Euclidean space and  we can express $ds^2=\eta^2+ dr^2$ as $\left|NP+dP\right| = dr$. Observe now, the triangle $\left|\widehat{\tau(P)\tau(N)\tau(P+dP)}\right|$. There also we have $\left|\tau(P+dP)\tau(P)\right|^2 = \left|\tau(P)\tau(N)\right|^2+\left|\tau(P+dP)\tau(N)\right|^2$. Can we find a relationship between these two triangle?\\
 \begin{figure}[H]
 \begin{center}
-\input{D:/MathLatex/images/fig_p139_Ex4.tex}
+\input{./images/fig_p139_Ex4.tex}
 \caption{Coordinate system in constant curvature space}
 \label{fig:fig_p139_Ex4}
 \end{center}
