--- a/chapter2.tex
+++ b/chapter2.tex
@@ -865,7 +865,7 @@ $$\blacklozenge$$
 \begin{tcolorbox}
 Show that for the spherical polar metric 
 $$\textbf{2.546}\quad T^n_{\ |n} = \frac{1}{r^2}\partial_r(r^2 \ T^1) + \frac{1}{\sin \theta }\partial_{\theta}(\sin \theta\  T^2) + \partial_{\phi}T^3 $$
-Obtain a similar expression for the "Laplacian" $\Delta V$ of an invariant $V$ defined as $$\textbf{2.547}\quad\Delta V = \left( a^{mn}\partial_m V\right)_{|n}$$
+Obtain a similar expression for the ``Laplacian'' $\Delta V$ of an invariant $V$ defined as $$\textbf{2.547}\quad\Delta V = \left( a^{mn}\partial_m V\right)_{|n}$$
 \end{tcolorbox}
 We have
 \begin{align}
