--- a/chapter3.tex
+++ b/chapter3.tex
@@ -2,9 +2,9 @@
 \pagebreak[4]
 \section{p82 - Exercise}
 \begin{tcolorbox}
-Explain why the surfaces of an ordinary cylinder and an ordinary cone are to be regarded as "flat" in the sense of our definition.
+Explain why the surfaces of an ordinary cylinder and an ordinary cone are to be regarded as ``flat'' in the sense of our definition.
 \end{tcolorbox}
-The reason is because those surfaces can be "unwrapped" like the figure below shows. 
+The reason is because those surfaces can be ``unwrapped'' like the figure below shows. 
 \begin{figure}[h]
 %\includegraphics[scale=.5]{Conemapping.jpg}
 
@@ -13,7 +13,7 @@ The reason is because those surfaces can be "unwrapped" like the figure below sh
 \end{figure}\\
 For the cone, we can for each point $\ P $ on the cone, lying on a distance $\ h $ from the apex and making an angle $\theta $,  associate on a plane, tangent to the cone,  a  point $ P^* $ lying at the same  distance $ h $ from the apex, taken as origin for the coordinate system, and making an angle $\phi =  \theta \sin{\alpha} $ with $ \alpha $ the angle of the cone. This pair of coordinates are polar coordinates with $ r \in (-\infty, + \infty)$ and $\theta \in [0, 2k\pi)$. 
 The same reasoning can be applied to a cylinder which is a cone with the apex at $\infty$. In that case the coordinate system becomes a Cartesian coordinate system. \\
-As a continuous mapping exist from polar to orthogonal Cartesian coordinates both  coordinate system can be written under the required form (3.101) and so can be called "flat".
+As a continuous mapping exist from polar to orthogonal Cartesian coordinates both  coordinate system can be written under the required form (3.101) and so can be called ``flat''.
 
 $$\blacklozenge$$
 \newpage
