--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1106,7 +1106,7 @@ A dynamical system consists of a thin straight smooth tube which can rotate in a
 \end{tcolorbox}
 Well understanding the question is of course paramount:
 \begin{itemize}
-  \item  The tube mentioned plays only a functional role to hold the spring "stiff" along the line $OB$ as its mass can be neglected.It  will play  no further role in the dynamics of the system. 
+  \item  The tube mentioned plays only a functional role to hold the spring ``stiff'' along the line $OB$ as its mass can be neglected.It  will play  no further role in the dynamics of the system. 
   \item Nothing is said that the system contains any force that keeps the angular velocity at a constant speed $\omega$. 
 \end{itemize}  
 That being clarified, one can expect that the system will behave as a harmonic oscillator along the line  $OB$ and that ,given an initial rotational momentum, the angular momentum will be a constant during the trajectory of the bead.
@@ -1190,7 +1190,7 @@ Put $B= \frac{\partial x^r}{\partial v}$ and $A=  \frac{\partial (T-V)(u,v)}{\pa
 \dv{L}{v} &= \int_{u_1}^{u_2}d\left(\frac{\partial (T-V)(u,v)}{\partial \dot{x^r}}\frac{\partial x^r}{\partial v} \right)-\int_{u_1}^{u_2}\frac{\partial x^r}{\partial v} d \left(\frac{ \partial (T-V)(u,v)}{\partial \dot{x^r}} \right)+\int_{u_1}^{u_2}\frac{\partial (T-V)(u,v)}{\partial x^r}\frac{\partial x^r}{\partial v}du\\
 &=\left.\frac{\partial (T-V)(u,v)}{\partial \dot{x^r}}\frac{\partial x^r}{\partial v} \right|_{u_1}^{u_2}-\left[\int_{u_1}^{u_2}\left(\frac{\partial}{\partial u} \left(\frac{ \partial (T-V)(u,v)}{\partial \dot{x^r}} \right)-\frac{\partial (T-V)(u,v)}{\partial x^r}\right)\frac{\partial x^r}{\partial v} du \right]
 \end{align}
-We express now the results in term of infinitesimals. A change in "length" $\delta L$ when we pas from a curve $v$ to a curve $v+dv$ is
+We express now the results in term of infinitesimals. A change in ``length'' $\delta L$ when we pas from a curve $v$ to a curve $v+dv$ is
 \begin{align}
 \delta L &= \dv{L}{v}\delta v\\
 &= \left.\frac{\partial (T-V)(u,v)}{\partial \dot{x^r}}\frac{\partial x^r}{\partial v} \delta v\right|_{u_1}^{u_2}-\int_{u_1}^{u_2}\left(\frac{\partial}{\partial u} \left(\frac{ \partial (T-V)(u,v)}{\partial \dot{x^r}} \right)-\frac{\partial (T-V)(u,v)}{\partial x^r}\right)\frac{\partial x^r}{\partial v}\delta v du\\
