--- a/chapter6.tex
+++ b/chapter6.tex
@@ -193,7 +193,7 @@ Prove that  $\frac{\epsilon^{rmn}}{\sqrt{a}}$ is an (absolute) contravariant ten
 \text{(1)  in (2)} \spatie \epsilon^{'uvw}&= \frac{\sqrt{a^{'}}}{\sqrt{a^{}}}\epsilon^{rmn}\frac{\partial x^{'u}}{\partial x^r}\frac{\partial x^{'v}}{\partial x^m}\frac{\partial x^{'w}}{\partial x^n}\\
 \Rightarrow \spatie \frac{\epsilon^{'uvw}}{\sqrt{a^{'}}}&= \frac{\epsilon^{rmn}}{\sqrt{a}}\frac{\partial x^{'u}}{\partial x^r}\frac{\partial x^{'v}}{\partial x^m}\frac{\partial x^{'w}}{\partial x^n}
 \end{align}
-which is the required transformation rule for a "normal" (absolute) tensor.
+which is the required transformation rule for a ``normal'' (absolute) tensor.
  $$\blacklozenge$$
 \newpage
 
@@ -351,7 +351,7 @@ For $ \displaystyle \lim_{a \to 0} \frac{1}{a^2} \int X_rdV=0$ the reasoning is 
 \end{align}
 $$\lozenge$$
 \textbf{But  $\displaystyle \lim_{a \to 0} \frac{S}{a^2}$ is not zero,...}\\\\
-Be $S_t$ the area of the "sloped" triangle in the tetrahedron. Then, the total area of the tetrahedron is:
+Be $S_t$ the area of the ``sloped'' triangle in the tetrahedron. Then, the total area of the tetrahedron is:
 \begin{align}
 &S= \half\left(ab + bc + ac \right) + S_t\\
 &S_t > \half ab\text{,   }S_t > \half bc\text{,   }S_t > \half ac\\
@@ -1128,7 +1128,7 @@ $$\dv{}{t}\oint_{\partial\Sigma_{t}} v_rdx^r=0$$
 
 \section{p235 - Exercise 4}
 \begin{tcolorbox}
-Curves having at each point the direction of the vorticity vector $\omega^r$ are called "vortex lines". Prove that $\int_{C} v_rdx^r$ has the same value for all closed curves $C$ which lie on the surface of the tube of vortex lines, and go once around the tube in the same sense. (Use Stokes' theorem; cf. 7.502.).
+Curves having at each point the direction of the vorticity vector $\omega^r$ are called ``vortex lines''. Prove that $\int_{C} v_rdx^r$ has the same value for all closed curves $C$ which lie on the surface of the tube of vortex lines, and go once around the tube in the same sense. (Use Stokes' theorem; cf. 7.502.).
 \end{tcolorbox}
 \begin{figure}[H]%
     \centering
