--- a/chapter7.tex
+++ b/chapter7.tex
@@ -493,8 +493,8 @@ $$\blacklozenge$$
 \begin{tcolorbox}
 In the relativistic theory of finite, expanding universe, the following line element is adopted:
 $$ds^2=R^2\left[dr^2+\sin^2 r\left(d\theta^2+\sin^2\theta d\phi^2\right)\right]-dt^2$$
-where $R=R(t)$ is a function of the "time" $t$. the ranges of the coordinates may be taken to be $0\leq r\leq \pi, \ 0 \leq \theta \leq \pi,\ 0 \leq \phi< 2\pi,\ -\infty < t < + \infty$.\\
-Find the total volume of "space", i.e., of the surface $t=$ constant, and show that it varies with the "time" $t$ as $R^3(t)$.
+where $R=R(t)$ is a function of the ``time'' $t$. the ranges of the coordinates may be taken to be $0\leq r\leq \pi, \ 0 \leq \theta \leq \pi,\ 0 \leq \phi< 2\pi,\ -\infty < t < + \infty$.\\
+Find the total volume of ``space'', i.e., of the surface $t=$ constant, and show that it varies with the ``time'' $t$ as $R^3(t)$.
 \end{tcolorbox}
 For the considered metric, we have
 \begin{align}
@@ -528,7 +528,7 @@ dv_{(M)}^2&= \frac{\epsilon (b)}{M!}a_{k_1s_1}\dots a_{k_M s_M}d\tau_{(M)}^{k_1\
 \end{align}
 
 
-getting for the volume of "space"  with "radius" $R$:
+getting for the volume of ``space''  with "radius" $R$:
 \begin{align}
 V&= \int_{0}^{\pi}\int_{0}^{\pi}\int_{0}^{2\pi}R^3\sin^2 r\sin\theta dr d\theta d\phi\\
 &= 2 R^3\pi  \int_{0}^{R}\sin^2 r dr \underbrace{\int_{0}^{\pi}\sin\theta d\theta}_{=\left. -cos\theta\right|_0^{\pi}}\\
@@ -1343,7 +1343,7 @@ by $(8)$ we have
 \begin{align}
 T_{1\dots N-1} =  \int_{f_{lb}(z_{N})}^{f_{ub}(z_{N})}dz_{N} 
 \end{align}
-The integration in $(5)$ is done over a tube along the $z_{N}$ direction with a "base" $dz_{1}\dots dz_{N-1}$. Nothing the sign symmetry of the condition $z_pz_p \leq R^2$ we can take $0$  for the lower bound $f_{lb}(z_{N})$ and $f_{ub}(z_{N})^2 = R^2- z_{N-1}^2- z_{N-2}^2\dots  -z_{1}^2 $ as upper bound. Let's call this upper bound $\phi_{N}$ with $\phi_{N} =\left(R^2- z_{N-1}^2- z_{N-2}^2\dots  -z_{1}^2\right)^{\half}$
+The integration in $(5)$ is done over a tube along the $z_{N}$ direction with a ``base'' $dz_{1}\dots dz_{N-1}$. Nothing the sign symmetry of the condition $z_pz_p \leq R^2$ we can take $0$  for the lower bound $f_{lb}(z_{N})$ and $f_{ub}(z_{N})^2 = R^2- z_{N-1}^2- z_{N-2}^2\dots  -z_{1}^2 $ as upper bound. Let's call this upper bound $\phi_{N}$ with $\phi_{N} =\left(R^2- z_{N-1}^2- z_{N-2}^2\dots  -z_{1}^2\right)^{\half}$
 giving for $(2)$
 \begin{align}
 V = 2\int_{R_{N-1}}\left(\int_{0}^{\phi_{N}}dz_{N}\right)d\tau_{(N-1)}^{1 \dots N-1}
