--- a/chapter8.tex
+++ b/chapter8.tex
@@ -1395,7 +1395,7 @@ J^W \fdv{T^r_{mn}}{u}\left[X^{\rho}_{r}X^{m}_{\mu}X^{n}_{\nu}\right]
 $$\lozenge$$
 \textbf{Product rule}\\\\
 Let's take a, relative,  outer product tensor $T^{mn}_{rsp} =X^{m}_{rs}Y^{n}_{p} $.\\
-Obviously, the product rule applies to the "normal" derivative.
+Obviously, the product rule applies to the ``normal'' derivative.
 For the middle terms we will have
 \begin{align}
 &\left(\Gamma^m_{kt}T^{kn}_{rsp}+\Gamma^n_{kt}T^{mk}_{rsp}-\overline{\Gamma}^k_{rt}T^{mn}_{ksp} -\overline{\Gamma}^k_{st}T^{mn}_{rkp} -\overline{\Gamma}^k_{pt}T^{mn}_{rsk} \right)\dv{x^t}{u}\\
@@ -1413,11 +1413,11 @@ $$-W\Gamma^k_{kt}T^{mn}_{rsp}\dv{x^t}{u}$$ we have to be aware that the weight $
 -\left(W_y\Gamma^k_{kt}Y^{n}_{p}\right)X^{m}_{rs}\dv{x^t}{u}-\left(W_x\Gamma^k_{kt}X^{m}_{rs}\right)Y^{n}_{p}\dv{x^t}{u}
 \end{align}
 which also follows the product rule. 
-Considering that the product rule applies to the "normal" derivative combined with $(11)$ and $(14)$ we can conclude that the product rule applies to the absolute derivative as defined for relative tensors.
+Considering that the product rule applies to the ``normal'' derivative combined with $(11)$ and $(14)$ we can conclude that the product rule applies to the absolute derivative as defined for relative tensors.
 $$\lozenge$$
 \textbf{Sum rule}\\\\
 Let's take a tensor $T^{mn}_{rsp} =X^{mn}_{rsp}+Y^{mn}_{rsp}$.\\
-Obviously, the sum rule applies to the "normal" derivative.
+Obviously, the sum rule applies to the ``normal'' derivative.
 For the middle terms we will have
 \begin{align}
 &\left(\Gamma^m_{kt}T^{kn}_{rsp}+\Gamma^n_{kt}T^{mk}_{rsp}-\overline{\Gamma}^k_{rt}T^{mn}_{ksp} -\overline{\Gamma}^k_{st}T^{mn}_{rkp} -\overline{\Gamma}^k_{pt}T^{mn}_{rsk} \right)\dv{x^t}{u}\\
@@ -1438,7 +1438,7 @@ $$-W\Gamma^k_{kt}T^{mn}_{rsp}\dv{x^t}{u}$$ the weight $W$ is also the weight of 
 -W\Gamma^k_{kt}X^{mn}_{rsp}\dv{x^t}{u}-W\Gamma^k_{kt}Y^{mn}_{rsp}\dv{x^t}{u}
 \end{align}
 which also follows the sum rule. 
-Considering that the sum  rule applies to the "normal" derivative combined with $(11)$ and $(14)$ we can conclude that the sul rule applies to the absolute derivative as defined for relative tensors.
+Considering that the sum  rule applies to the ``normal'' derivative combined with $(11)$ and $(14)$ we can conclude that the sul rule applies to the absolute derivative as defined for relative tensors.
 $$\blacklozenge$$ 
 \newpage
 
