--- a/images/fig_p105_3521_a.tex
+++ b/images/fig_p105_3521_a.tex
@@ -30,4 +30,4 @@
 \node[{anchor=north west}] at (p1)  {$P^{'}$};
 \draw [loosely dashdotted,   ultra thick, decoration={markings,  mark = at position 0.5 with {\arrow[scale = 0.8]{Latex[]}}},postaction ={decorate}](A) .. controls (-3,-2) and (-3,-2) .. (p2);
 \draw[loosely dashdotted,   ultra thick, decoration={markings,  mark = at position 0.5 with {\arrow[scale = 0.8]{Latex[reversed]}}},postaction ={decorate}] (p1) .. controls (-3,-1) and (-3,-1) .. (p2);
-\end{tikzpicture}\\
+\end{tikzpicture}
