--- a/images/fig_p191_Exa.tex
+++ b/images/fig_p191_Exa.tex
@@ -14,29 +14,36 @@
 \coordinate  {} {} {};
 \coordinate  {} {} {};
 \coordinate (NPole) at (0,8.5) {} {};
-%\draw[fill=white]  (NPole) circle (0.1);
 \coordinate (SPole) at (0,-7.5) {} {};
 \draw[-{Latex[length=2mm]}] (SPole) -- (NPole);
-%\draw[fill=white]  (SPole) circle (0.1);
-\coordinate (P) at (4.5,4) {} {};
+\coordinate (P) at (4.2426,4.2426) {} {};
 \draw[fill=white]  (P) circle (0.1);
-\draw[fill=white]  (O1) circle (0.1);
+\draw[fill=white]  (O1) circle (0.05);
 \draw[dashed] (O1) -- (P);
 %\node[label=west:$O$] at (O1) {};
 \node[label=east:$P\left(x \text{, } y\right)$] at (P) {};
-\coordinate (O2) at (3,0) {};
+\coordinate (O2) at (1.5,0) {};
 \node[label=north east:$\theta\text{=} \arctan\frac{y}{x}$] at (O2) {};
-\draw [dashed, decoration={markings, mark=at position 0.52 with {\arrow[scale = 1.]{Latex[length=2mm]}}},    postaction={decorate}](O2) arc (0:42:3 and 3.0);
-\coordinate (F) at (1,7) {} {};
-\draw [-{Latex[length=2mm]}] (P) -- (F);
+\draw [dashed, decoration={markings, mark=at position 0.7 with {\arrow[scale = 1.]{Latex[length=2mm]}}},    postaction={decorate}](O2) arc (0:30:2 and 2.0);
+\coordinate (F) at (1.5,7) {} {} {};
+\draw [-{Latex[length=2mm]}, ] (P) -- (F);
 \node[label=east:$\mathbf{\overline{v}}$] at (F) {};
-
+\coordinate (Fp) at (-3,3) {} {} {} {};
+\draw [-{Latex[length=2mm]},dashed] (O1) -- (Fp);
+\node[label=west:$\mathbf{\overline{v}}$] at (Fp) {};
+\tkzMarkRightAngle[size=0.43](F,P,O1);
+\tkzMarkRightAngle[size=0.43, ](P,O1,Fp);
 \coordinate (x1)at (-7,0) {};
 \coordinate (X) at (8.5,0) {} {};
 \draw [-{Latex[length=2mm]}] (x1) -- (X);
 \node[label=south east:$x$] at (X) {};
 \node[label=south east:$y$] at (NPole) {};
-\coordinate (C1) at (4,4.5) {};
-\coordinate (C2) at (2.5,2.5) {};
-\tkzMarkRightAngle[size=0.3](C1,P,C2);
+\coordinate (xx)at (-3,0) {};
+\draw[fill=white]  (xx) circle (0.1);
+\coordinate (yy)at (0,3) {};
+\draw[fill=white]  (yy) circle (0.1);
+\draw [dashed, ] (xx) -- (Fp);
+\draw [dashed ] (yy) -- (Fp);
+\node[label=south :$-sin\left(\theta\right)$] at (xx) {};
+\node[label= east:$cos\left(\theta\right)$] at (yy) {};
 \end{tikzpicture}
