--- a/images/fig_p221_6331_c.tex
+++ b/images/fig_p221_6331_c.tex
@@ -1,4 +1,4 @@
-\begin{tikzpicture}[x=(15:0.5), y=(90:0.6), z=(-20:2.2)]
+\begin{tikzpicture}[x=(15:0.5), y=(90:0.6), z=(-20:2.2),scale=0.8]
 \newcommand*\lateraleye{%
        \scalebox{0.25}{
     \tikzset{every picture/.style={line width=0.75pt}} 
