--- a/images/fig_p227_6361_a.tex
+++ b/images/fig_p227_6361_a.tex
@@ -30,7 +30,7 @@
 \draw  [fill= white](ksi1)circle (1pt);
 \draw  [fill= white](ksi2)circle (1pt);
 \draw  [fill= white](ksi3)circle (1pt);
-v\draw  [fill= white](ksi4)circle (1pt);
+\draw  [fill= white](ksi4)circle (1pt);
 \draw  [fill= white](ksi5)circle (1pt);
 \draw  plot[smooth cycle, tension=.7] coordinates {(0.5,3) (0.5,2.5) (1,2) (2,1.5) (3,0.5) (3.5,1) (4,1.5) (4,2)  (3.5,3.5) (3,4) (2,4)   (1,4) };
 \node[below] at (3,0.5){$V^{'}_{\zeta}$};
