--- a/images/fig_p78_247_a.tex
+++ b/images/fig_p78_247_a.tex
@@ -46,8 +46,8 @@
 	\draw[axis] (0,0,0) -- (0,0,1) node[anchor=south]{$z$};
 	
 	%draw a vector from O to P
-	\draw[vector] (O) -- (S0);
-	\draw[vector] (O) -- (J)  ;
+	\draw[ vector, thick ] (O) -- (S0);
+	\draw[vector,  thick] (O) -- (J)  ;
 	
 	%draw guiding lines
 	\draw[dashed,tdplot_main_coords] (S2)-- (S1)  ;
