--- a/images/fig_p199_P.tex
+++ b/images/fig_p199_P.tex
@@ -20,11 +20,18 @@
 \draw [fill=gray] (xyz) circle (2pt) node[above right] (n1) {$$};
 
 \coordinate (nxy) at (\aax/3,\bby/3,-2);
-\draw[-Latex,very thick](xy)--(nxy);
+\coordinate (nxyO) at (\aax/3,\bby/3,-0.2);
+\draw[dashed, thick](xy)--(nxyO);
+\draw[-Latex,very thick](nxyO)--(nxy);
 \coordinate (nxz) at (\aax/3,-5,\ccz/3);
-\draw[-Latex,very thick](xz)--(nxz);
+\coordinate (nxzO) at (\aax/3,-2.5,\ccz/3);
+\draw[dashed,very thick](xz)--(nxzO);
+\draw[-Latex,very thick](nxzO)--(nxz);
 \coordinate (nyz) at (-2,\bby/3,\ccz/3);
-\draw[-Latex,very thick](yz)--(nyz);
+\coordinate (nyzO) at (-0.5,\bby/3,\ccz/3);
+\draw[dashed,very thick](yz)--(nyzO);
+\draw[-Latex,very thick](nyzO)--(nyz);
+
 \coordinate (nxyz) at (3*\aax/3,3*\bby/3,3*\ccz/3);
 \draw[-Latex, very thick](xyz)--(nxyz);
 \node[anchor = south east] at (nxy){$dS_z$};
@@ -69,13 +76,14 @@
 \node[anchor = south east] at (z){z};
 
 \draw[very thick,](A)--(B)--(C)--cycle;
-\draw[very thick](A)--(O)--(C)--cycle;
-\draw[very thick](A)--(O)--(B)--cycle;
-\draw[very thick](O)--(B)--(C)--cycle;
+
+\draw[dashed, very thick](O)--(B);
+\draw[dashed, very thick](O)--(C);
+\draw[dashed,very thick](O)--(A);
 
 \node[anchor = south west] at (A){A};
 \node[anchor = north east] at (O){o};
 \node[anchor = north east] at (C){C};
 \node[anchor = south west ] at (B){B};
 
-\end{tikzpicture}   
+\end{tikzpicture}    
