--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1986,7 +1986,7 @@ and a line
 z_{i_1} = \theta \omega_{i_1}\quad (\theta \in \mathbb{R})
 \end{align*}
 First we note that $\omega_{i_1}$ (and hence $z_{i_1}$) is not a null-vector:\\
-Let's consider in $(3)$ the terms consisting of the permutation of the sequence of pairs $$\left\{\left( i_2,i_3 \right),\left( i_4,i_5 \right),\left( i_6,i_7\right),\dots ,\left( i_{N-1},i_N \right)\right\}$$ This sequence contains $\frac{N-1}{2}$ pairs and so can be arranged in $\frac{N-1}{2}!$ ways. As for each pair we have two valid possibilities e.g. $\left( i_2,i_3 \right)$ and $\left( i_3,i_2 \right)$ and as a sequence contains $\frac{N-1}{2}$ pairs, we will have for a given order of pairs $2^{\frac{N-1}{2}}$ possibilities. So in $(1)$ there will be $2^{\frac{N-1}{2}}\frac{N-1}{2}!$ terms consisting of the permutation of the sequence of pairs $\left\{\left( i_2,i_3 \right),\left( i_4,i_5 \right),\left( i_6,i_7\right),\dots ,\left( i_{N-1},i_N \right)\right\}$.\\
+Let's consider in $(3)$ the terms consisting of the permutation of the sequence of pairs $$\left\{\left( i_2,i_3 \right),\left( i_4,i_5 \right),\left( i_6,i_7\right),\dots ,\left( i_{N-1},i_N \right)\right\}$$ This sequence contains $\frac{N-1}{2}$ pairs and so can be arranged in $\frac{N-1}{2}!$ ways. As for each pair we have two valid possibilities e.g. $\left( i_2,i_3 \right)$ and $\left( i_3,i_2 \right)$ and as a sequence contains $\frac{N-1}{2}$ pairs, we will have for a given order of pairs $2^{\frac{N-1}{2}}$ possibilities. So in $(3)$ there will be $2^{\frac{N-1}{2}}\frac{N-1}{2}!$ terms consisting of the permutation of the sequence of pairs $\left\{\left( i_2,i_3 \right),\left( i_4,i_5 \right),\left( i_6,i_7\right),\dots ,\left( i_{N-1},i_N \right)\right\}$.\\
 Without loss of generality, suppose that $\epsilon_{i_{1} i_{2} \dots i_{N}}$ is positive and also all $\omega_{i_{2k} i_{2k+1}}$ are positive.
 Let's first consider a permutation of two pairs in the sequence $\left\{\left( i_2,i_3 \right),\left( i_4,i_5 \right),\left( i_6,i_7\right),\dots ,\left( i_{N-1},i_N \right)\right\}$. Obviously, this does not change the product of the $\omega_{i_{2k} i_{2k+1}}$. Also $\epsilon_{i_{1} i_{2} \dots i_{N}}$ will hold it's initial sign as the considered permutation needs two permutation of indices.\\
 Next consider a permutation in one of the pairs of the sequence. Obviously $\epsilon_{i_{1} i_{2} \dots i_{N}}$ will change sign but also the picked $\omega_{i_{2k} i_{2k+1}}$(skew-symmetric). \\
@@ -2077,7 +2077,7 @@ and
 I_{st}\epsilon_{trq}\epsilon_{snp} &= \half J^{'}_{kjuv} \underbrace{\epsilon_{tuv}\epsilon_{trq}}_{= \delta_{ur}\delta_{vq}-\delta_{uq}\delta_{vr}}\underbrace{\epsilon_{skj}\epsilon_{snp}}_{= \delta_{kn}\delta_{jp}-\delta_{kp}\delta_{jn}}\\
 &= -\half J{'}_{npqr} \epsilon_{rqt}\epsilon_{snp}
 \end{align*}
-expanding the right product we get
+expanding the right terms we get
 \begin{align*}
 I_{st}\epsilon_{trq}\epsilon_{snp} &= \half \left( J{}_{nprq} +J{}_{pnqr}-J{}_{npqr}-J{}_{pnrq}\right)
 \end{align*}
